# stock_trading_simulator

./: LICENSE  README.md  application.py  finance.db  pyproject.toml
templates/: add_cash.html  buy.html  history.html  index.html  layout.html  quote.html  quoted.html  register.html  sell.html
